# github-ureq

./: Cargo.toml  README.md
src/: endpoints.rs  lib.rs  license.rs  release.rs  releases.rs  repository.rs  user.rs  utils.rs
src/types/: license.rs  mod.rs  release.rs  repository.rs  user.rs
tests/: releases.rs  tests.rs
