[package]
name = "github-ureq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
strum = { version = "0.24", features = ["derive"] }
getset = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2.4", features = ["json"] }
url = "2.2"
thiserror = "1.0"

[dev-dependencies]
test-case = "2.0"
